<resources>
    <string name="app_name">Cash Out</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="type_upc">Type Code</string>
    <string name="sign_out">Sign Out</string>
    <string name="update_account">Update</string>
    <string name="delete_account">Delete Account</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="account">Account</string>
    <string name="username">Username</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="create_review">Create Review</string>
    <string name="product_icon">Image of the product</string>
    <string name="rating">Rating</string>
    <string name="review_title">Review Title</string>
    <string name="review_description">Review Description</string>
    <string name="save">Save</string>
    <string name="rating_info">/ 5.0</string>
    <string name="history">History</string>
    <string name="scan">Scan</string>
    <string name="search">Search</string>
    <string name="read_reviews">Read Reviews</string>
    <string name="default_review_description">No description provided.</string>
    <string name="manual_input_message">Please type in all numbers located on the product\'s barcode to search for it.</string>
    <string name="no_lowest_price">Lowest Price: N/A</string>
    <string name="no_highest_price">Highest Price: N/A</string>
    <string name="no_current_price">Current Price: N/A</string>
    <string name="no_average_rating">Average Rating: N/A</string>
    <string name="average_rating">Average Rating: %1s/5.0</string>
    <string name="given_rating">Rating: %1s/5.0</string>
    <string name="lowest_price">Lowest Price: $%1.2f</string>
    <string name="highest_price">Highest Price: $%1.2f</string>
    <string name="current_price_no_merchant">Current Price: $%1.2f</string>
    <string name="current_price_with_merchant">Current Price: $%1.2f at %2s</string>
    <string name="accountActivity">Account Information</string>
    <string name="historyActivity">Previously Scanned Products</string>
    <string name="infoActivity">Product Information</string>
    <string name="listReviewsActivity">All Product Reviews</string>
    <string name="manualSearchActivity">Manual Product Search</string>
    <string name="reviewDetailActivity">Product Review</string>
    <string name="scanActivity">Scan Product</string>
    <string name="productTitle">Title: %1s</string>
    <string name="user">User: %1s</string>
    <string name="no_product_found">Couldn\'t find that product!</string>
    <string name="account_updated">Account successfully updated.</string>
    <string name ="unable_to_update">Currently unable to update email and/or password, try again later.</string>
    <string name="unable_to_delete">Currently unable to delete your account, try again later.</string>
    <string name="email_required">An email is required.</string>
    <string name="enter_valid_email">Please enter a valid email.</string>
    <string name="account_exists">An account with that email address already exists.</string>
    <string name="password_length">Your password must be at least 6 characters long.</string>
    <string name="confirm_password_warning">You must confirm your password.</string>
    <string name="unmatched_passwords">Your password entries did not match, please try again.</string>
    <string name="username_required">A username is required.</string>
    <string name="username_taken">That username is already taken.</string>
    <string name="failed_to_login">Failed to sign in, please try again.</string>
    <string name="password_required">A password is required.</string>
    <string name="review_needs_title">Review must have a title.</string>
    <string name="review_needs_score">Review needs a score.</string>
    <string name="score_bounds">Score must be between 1.0 and 5.0.</string>
    <string name="score_must_be_number">Score must be a number</string>
    <string name="must_enter_code">You must enter a code to search.</string>
    <string name="failed_to_create_account">We failed to create your account.</string>
    <string name="getting_product_information">Searching for this product&#8230;</string>
    <string name="getting_account_information">Getting your account info&#8230;</string>
    <string name="account_retrieval_failed">Failed to get account information at this time.</string>
    <string name="cannot_update_account">We could not update your account.</string>
    <string name="unable_to_make_review">Unable to make your review at this time.</string>
</resources>
