<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/makeReviewFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/productTitle"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            tools:drawableStart="@tools:sample/avatars"
            android:gravity="center"
            tools:text="Text Here" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:hint="@string/rating"
                android:inputType="number"
                android:layout_marginEnd="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/rating_info"
                android:gravity="center"
                android:textSize="24sp"/>

        </LinearLayout>

        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/review_title"
            android:inputType="text"/>

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:hint="@string/review_description"
            android:inputType="textCapSentences|textMultiLine"/>

        <Button
            android:id="@+id/save_review_button"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:text="@string/save"/>

    </LinearLayout>

</LinearLayout>